syntax = "proto3";
option java_package = "com.conveniencestore.conveniencestore.protobuf";

message LocalDateTime {
  int32 year = 1;
  int32 month = 2;
  int32 day = 3;
}