syntax = "proto3";

enum UserRoles {
  UNKOWN = 0;
  ADMIN = 1;
  EMPLOYEE = 2;
}
message LocalDateTimePb {
  int32 year = 1;
  int32 month = 2;
  int32 day = 3;
}

message EditUserDTO {
  string username = 1;
  string email = 2;
}
message Product {
	int32 id = 1;
	int32 entity_id = 2;
	bool sold = 3;
	LocalDateTimePb created_at = 4;
	LocalDateTimePb updated_at = 5;
}
message ProductEntityDTO {
  string name = 1;
}

message ProductEntity {
  int32 id = 1;
  string name = 2;
  LocalDateTimePb created_at = 3;
  LocalDateTimePb updated_at = 4;
  repeated Product products = 5;
}


message ProductEntityCatalog {
  repeated ProductEntity products = 1;
}

message UserDTO {
  string username = 1;
  string email = 2;
  string password = 3;
  UserRoles role = 4;
}

message UserResponseDTO {
  int32 id = 1;
  string username = 2;
  string email = 3;
  UserRoles role = 4;
  LocalDateTimePb created_at = 5;
  LocalDateTimePb updated_at = 6;
}

message UserResponseCatalog {
  repeated UserResponseDTO users = 1;
}

